--- a/content/certification.html
+++ b/content/certification.html
@@ -11,132 +11,5 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <p>
-  The <a href="https://lpi.org/">Linux Professional Institute</a>, the
-  <a href="https://publiccode.net/">Foundation for Public Code</a> and
-  <a href="https://www.documentfoundation.org/">The Document Foundation</a> will
-  organise exam sessions during <%= conference()[:title] %>.
-  Interested candidates will be able to register for exams with the respective
-  certification groups.
-</p>
-
-<img src="asset:lpi-big" alt=""
-    style="float:right; margin-left: 1em; margin-right: 1em;"/>
-<a name="lpi"></a>
-<h2>LPI certification</h2>
-<p>
-  As in previous years, the Linux Professional Institute will again offer a
-  discount to examination candidates at <%= conference()[:title] %>. The level
-  1, level 2 and level 3 exams are offered at a <strong>discount of nearly 50%</strong>.
-</p>
-
-<p>
-  The following examinations are offered.
-</p>
-
-<table class="table table-striped table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Certification</th>
-      <th>Exams</th>
-      <th>Price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><a href="https://www.lpi.org/our-certifications/linux-essentials-overview">Linux Essentials</a></td>
-      <td>010</td>
-      <td>&euro; 70.00</td>
-    </tr>
-    <tr>
-      <td><a href="https://www.lpi.org/our-certifications/lpic-1-overview">LPIC-1</a></td>
-      <td>101, 102</td>
-      <td>&euro; 100.00</td>
-    </tr>
-    <tr>
-      <td><a href="https://www.lpi.org/our-certifications/lpic-2-overview">LPIC-2</a></td>
-      <td>201, 202</td>
-      <td>&euro; 100.00</td>
-    </tr>
-    <tr>
-      <td><a href="https://www.lpi.org/our-certifications/lpic-3-300-overview">LPIC-3</a></td>
-      <td>300, 303, 304</td>
-      <td>&euro; 100.00</td>
-    </tr>
-    <tr>
-      <td><a href="https://www.lpice.eu/en/our-certifications/devops-tools-engineer/">DevOps Tools Engineer</a></td>
-      <td>701</td>
-      <td>&euro; 100.00</td>
-    </tr>
-    <tr>
-      <td><a href="https://www.lpice.eu/en/our-certifications/bsd-specialist/">BSD Specialist</a></td>
-      <td>702</td>
-      <td>&euro; 100.00</td>
-    </tr>
-  </tbody>
-</table>
-
-<h3>Registration procedure</h3>
-<ul>
-  <li>
-    Register for an LPI ID on the following website:<br/>
-    <a href="https://cs.lpi.org/caf/Xamman/register">
-    https://cs.lpi.org/caf/Xamman/register</a>
-  </li>
-  <li>
-    Sign up for a specific exam session at:<br/>
-    <a href="https://lpievent.lpice.eu/">
-    https://lpievent.lpice.eu/</a><br/>
-  </li>
-  <li>
-    Registration is for Pearson VUE vouchers. No in-person sessions will be organised.
-  </li>
-  <li>
-    Note: Online exams can only be taken on Windows and macOS computers - check the 
-    <a href="https://home.pearsonvue.com/lpi/onvue?ot=collapse7">technical requirements</a>.
-</ul>
-
-<hr/>
-
-<a name="tdf"></a>
-<img src="asset:tdf-logo" alt=""
-  style="float:right; margin-left: 1em; margin-right: 1em;"/>
-<h2>LibreOffice Certification program</h2>
-<p>
- The Document Foundation will offer the LibreOffice Certification at
-  <%= conference()[:title] %>.
-</p>
-
-<p>
-  Individuals willing to be certified must be already active in the field of
-  migrations from proprietary software and large deployments of LibreOffice,
-  and/or LibreOffice training programs of any kind (within a migration or a
-  large deployment, or a training school).  More information is available on the
-  <a href="https://www.documentfoundation.org/certification/program/">certification page
-    of The Document Foundation website</a>.
-</p>
-
-<h3>Registration procedure</h3>
-<p>
-  Candidates should complete the <a
-  href="https://www.documentfoundation.org/certification/application/">certification
-  application</a> on The Document Foundation website. Exams will be taken via
-  <a href="https://jitsi.documentfoundation.org/fosdem-libreoffice-certification">Jitsi</a>
-</p>
-
-<hr/>
-
-<a name="spc"></a>
-<h2>The Standard for Public Code certification</h2>
-<p>
-  The Standard for Public Code gives public organizations a model for building
-  their own open source solutions to enable successful future reuse by other
-  public organizations. It includes guidance for policymakers, managers,
-  developers and designers.
-</p>
-
-<p>
-  The <a href="https://citybycity.academy/course/standards-for-smart-cities">open
-  online introduction course includes a free completion certificate. <br />
-  During FOSDEM, <a href="https://publiccode.net/">Foundation for Public Code</a>
-  staff will be available for questions.
+  Further details will be announced when they become available.
 </p>
