--- a/content/index.html
+++ b/content/index.html
@@ -13,8 +13,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
     <div class="text-block">
       <h2>FOSDEM is a free event for software developers to meet, share ideas and collaborate.</h2>
-      <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels. In 2021, they will gather online.</p>
-      <p class="btn-news"><a href="page:live">Visit the conference floor!</a></p>
+      <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.</p>
     </div>
 
     <%
@@ -23,35 +22,6 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     # in an "announcement-block" div or be a "news-block" div below the
     # "s-block" div. pph 20141210
     %>
-  <div class="news-block">
-    <ul class="news-list">
-      <li class="news">
-        <h3><a href="page:live#keynotes">Main tracks</a></h3>
-        <p>
-          All of our main tracks, keynotes and lightning talks.
-        </p>
-      </li>
-      <li class="news">
-        <h3><a href="page:live#devrooms">Devrooms</a></h3>
-        <p>
-          All the devrooms @ FOSDEM.
-        </p>
-      </li>
-      <li class="news">
-        <h3><a href="https://stands.fosdem.org/stands/">Stands</a></h3>
-        <p>
-          Visit our stands at <i>stands.fosdem.org</i>.
-        </p>
-      </li>
-      <li class="news">
-        <h3><a href="https://chat.fosdem.org/#/home">Chat</a></h3>
-        <p>
-          Join the chat at <i>chat.fosdem.org</i>.
-        </p>
-      </li>
-    </ul>
-  </div>
-
   <div class="news-block">
     <h2>NEWS</h2>
     <ul class="news-list">
@@ -100,6 +70,5 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
   <div class="location-block">
     <h2>LOCATION</h2>
-    <p>FOSDEM 2021 will take place online.</p>
+    <p>To be announced</p>
   </div>
-
