--- a/content/about.html
+++ b/content/about.html
@@ -108,29 +108,26 @@ navtitle: About
       <li>Pieter De Praetere</li>
       <li>Michael De Swert</li>
       <li>Philippe De Swert</li>
-      <li>Egbert De Vries</li>
+      <li>Christian Eisenhammer</li>
       <li>Geert Goossens</li>
       <li>Jan Gyselinck</li>
       <li>Richard Hartmann</li>
+      <li>Alex Howe</li>
       <li>Alasdair Kergon</li>
       <li>Vasil Kolev</li>
       <li>Jan-Frederik Martens</li>
       <li>Marthe Parada Delgado</li>
-      <li>Thomas Perale</li>
       <li>Stella Rouzi</li>
-      <li>Sebastian Schauenburg</li>
       <li>Jonas Scheers</li>
       <li>Kristian Schuhmacher</li>
       <li>Johan van Selst</li>
       <li>Wouter Simons</li>
       <li>Ieva Supjeva</li>
-      <li>Miguel Terol Espino</li>
-      <li>Emanuil Tolev</li>
+      <li>Louis Taylor</li>
       <li>Johan Van de Wauw</li>
       <li>Mark Van den Borre</li>
       <li>Peter Van Eynde</li>
       <li>Wouter Verhelst</li>
-      <li>Koen Vervloesem</li>
       <li>The many volunteers who help out during the weekend</li>
       <li>...</li>
     </ul>
