--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -14,15 +14,15 @@ navcat: true
 </p>
 
 <a name="online"></a>
-<h3>FOSDEM 2021 Online</h3>
+<h3>Online component</h3>
 <p>
-  FOSDEM 2021 is a fully online edition. How does this work? Visit <a href="page:practical/online">this page</a> for more details.
+  The format for FOSDEM 2022 has not yet been decided. It will have an important online component though. How does this work? Visit <a href="page:practical/online">this page</a> for more details.
 </p>
 
 <a name="venue"></a>
 <h3>Getting there</h3>
 <p>
-  Open your favourite web browser and navigate to the designated page.
+  For the online component, open your favourite web browser and navigate to the designated page.
 </p>
 
 <a name="timezone"></a>
