faq: when will the cfp open

--- a/content/faq.html
+++ b/content/faq.html
@@ -16,6 +16,11 @@ navtitle: FAQ
 </div>
 <div class="developers-block">
     <div class="text-block">
+	<a name="cfp">
+	<h4>When will the call for papers open?</h4>
+	<p>
+	    Soon. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/2022/rss.xml">rss feed</a>.
+	</p>
         <a name="video"></a>
         <h4>Visiting and videos</h4>
         <h5><span class="label label-info">Q:</span> In what timezone are you?</h5>
