--- a/content/faq.html
+++ b/content/faq.html
@@ -17,7 +17,8 @@ navtitle: FAQ
 <div class="developers-block">
     <div class="text-block">
 	<a name="cfp">
-	<h4>When will the call for papers open?</h4>
+	<h4>CFP</h4>
+	<h5><span class="label label-info">Q:</span> When will the CFP open?</h5>
 	<p>
 	    Soon. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/2022/rss.xml">rss feed</a>.
 	</p>
