faq: when will the cfp open

--- a/content/faq.html
+++ b/content/faq.html
@@ -16,7 +16,7 @@ navtitle: FAQ
 </div>
 <div class="developers-block">
     <div class="text-block">
-	<a name="cfp">
+        <a name="cfp"></a>
 	<h4>CFP</h4>
 	<h5><span class="label label-info">Q:</span> When will the CFP open?</h5>
 	<p>
