--- a/content/faq.html
+++ b/content/faq.html
@@ -6,6 +6,7 @@ navtitle: FAQ
     <div class="text-block">
         <h4>Contents</h4>
         <ul>
+	    <li><a href=#cfp">CFP</a></li>
             <li><a href="#video">Visiting and videos</a></li>
             <li><a href="#chat">Chatting and Q&A</a></li>
             <li><a href="#tshirts">T-shirts</a></li>
