--- a/content/index.html
+++ b/content/index.html
@@ -70,5 +70,5 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
   <div class="location-block">
     <h2>LOCATION</h2>
-    <p>To be announced</p>
+    <p>FOSDEM 2022 will take place online.</p>
   </div>
