--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -4,6 +4,83 @@ navtitle: T-shirts
 ---
 <div class="developers-block">
     <div class="text-block">
-	<p>More info soon.</p>
+        <h4>T-shirts and hoodies</h4>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>€25</th>
+                    <th>€50</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><img src="asset:t-shirt" alt="2022 T-shirt design." style="max-width: 4em;" /></td>
+                    <td><img src="asset:favicon-32x32" alt="€25 = T-shirt" /></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><img src="asset:hoodie" alt="2022 hoodie design." style="max-width: 4em;" /></td>
+                    <td></td>
+                    <td><img src="asset:favicon-32x32" alt="€50 = hoodie" /></td>
+                </tr>
+            </tbody>
+        </table>
+        <p>
+            We have T-shirts and hoodies again! As each year, they are a special limited edition to show our gratitude for
+            you donating to FOSDEM. However, we are having a virtual conference this time, so the T-shirt process is a
+            bit different from normal. For example, you don't have to queue and they won't run out this year.
+        </p>
+        <p>If you order by Sunday 16th January we will try to ship your order before the event so there is a chance it will arrive in time for you to wear it on camera!
+        <p>
+            You can get them till the end of the weekend after FOSDEM 2022 (2022-02-13). Don't miss out!
+        </p>
+        <h5>T-shirts</h5>
+        <img src="asset:t-shirt" alt="2022 T-shirt design." style="max-width: 80%; margin-top: 1em; margin-bottom: 1em;" />
+        <p>
+            The t-shirt design this year is grey with the FOSDEM 2022 logo. They're yours in exchange for a donation of
+            €25.
+        </p>
+        <p>
+            T-shirts are available in <i>non-fitted</i> (<i>male</i>) and <i>fitted</i> (<i>female</i>) for in sizes
+            S, M, L, XL, XXL and XXXL.
+        </p>
+        <p>
+            Get them from <a href="https://treasure.fosdem.org/shop/product/exclusive-fosdem-2022-t-shirt-11">here (EU)</a>
+            or <a href="https://row.treasure.fosdem.org/shop/product/exclusive-fosdem-2022-t-shirt-12">here (outside of the EU)</a>.
+        </p>
+        <h5>Hoodies</h5>
+        <img src="asset:hoodie" alt="2022 hoodie design." style="max-width: 80%; margin-top: 1em; margin-bottom: 1em;" />
+        <p>
+            The hoodie design this year is grey with the FOSDEM 2022 logo. They're yours in exchange for a donation of
+            €50.
+        </p>
+        <p>
+            Hoodies are available in S, M, L, XL, XXL and XXXL.
+        </p>
+        <p>
+            Get them from <a href="https://treasure.fosdem.org/shop/product/exclusive-fosdem-2022-hoodie-8">here (EU)</a>
+            or <a href="https://row.treasure.fosdem.org/shop/product/exclusive-fosdem-2022-hoodie-13">here (outside of the EU)</a>.
+        </p>
+        <h5>Getting them</h5>
+        <p>
+            For the online edition, we partnered with an print-on-demand provider, which means that they won't run out at Saturday noon,
+            as they normally do.
+         </p>
+         <p>
+             Visitors from the EU can go to <a href="https://treasure.fosdem.org">treasure.fosdem.org</a>, offering shipping to the EU.
+         </p>
+         <p>
+             If you want to ship to a destionation outside of the EU, go to <a href="https://row.treasure.fosdem.org">row.treasure.fosdem.org</a>.
+         </p>
+         <p>
+             If you can't find your country in either of the shops or you can't use the provided payment methods, send an e-mail
+             to <i>treasure-at-fosdem-dot-org</i> with the amount and the size of the hoodies/T-shirts you wish to order.
+         </p>
+         <h6>Delivery fees</h6>
+         <p>
+             The delivery fee depends on the country you wish to ship to. There are several tiers depending on what country you select.
+             Unfortunately you can't see them before you select a country.
+         </p>
     </div>
 </div>
