--- a/content/tshirts.html
+++ b/content/tshirts.html
@@ -71,7 +71,7 @@ navtitle: T-shirts
              Visitors from the EU can go to <a href="https://treasure.fosdem.org">treasure.fosdem.org</a>, offering shipping to the EU.
          </p>
          <p>
-             If you want to ship to a destionation outside of the EU, go to <a href="https://row.treasure.fosdem.org">row.treasure.fosdem.org</a>.
+             If you want to ship to a destination outside of the EU, go to <a href="https://row.treasure.fosdem.org">row.treasure.fosdem.org</a>.
          </p>
          <p>
              If you can't find your country in either of the shops or you can't use the provided payment methods, send an e-mail
