--- a/content/support/promote.html
+++ b/content/support/promote.html
@@ -1,9 +1,9 @@
 ---
 title: Promote
 ---
-<h2>Flyers, posters and banners</h2>
+<h2>Banners</h2>
 
-<p>These are some <a href="#flyers">flyers</a> to print and <a href="#banners">banners</a> to add
+<p>These are <a href="#banners">banners</a> to add
 to your personal (or Open Source project) website in order to reference FOSDEM. Feel free to use
 them to promote the event</p>
 
@@ -31,7 +31,7 @@ them to promote the event</p>
 	  <td>
             <p>Link: <a href="<%= badge.path %>"><%= badge.path %></a></p>
             <p>HTML markup:<br/>
-            <code>&lt;a href="http://fosdem.org"&gt;&lt;img src="<%= badge.path %>" alt="FOSDEM"/&gt;&lt;/a&gt;</code></p>
+            <code>&lt;a href="https://fosdem.org"&gt;&lt;img src="<%= badge.path %>" alt="FOSDEM"/&gt;&lt;/a&gt;</code></p>
           </td>
         </tr>
       <% end %>
