apps: first update for 2022

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -7,15 +7,11 @@ sponsors_under_navigation: true
 %>
 Ways to have the schedule with you at all times, without wasting trees: 
 
-<h3>Apps for Mobile Devices, tested for 2021</h3>
+<h3>Apps for Mobile Devices, tested for 2022</h3>
 <ul>
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-droid</a>.<br />
-</li>
-<li><b>Android: FOSDEM Schedule</b><br />
-    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2021">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-droid</a><br />
 </li>
 <li><b>Android: Giggity</b><br />
     <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
@@ -24,10 +20,6 @@ Ways to have the schedule with you at all times, without wasting trees:
 <li><b>KDE Plasma: Kongress</b><br />
     <a href="https://invent.kde.org/utilities/kongress">Source code</a><br />
     Available from <a href="https://kdebuild.manjaro.org/images/">Manjaro</a>, <a href="https://postmarketos.org/">postmarketOS</a>, <a href="https://flathub.org/apps/details/org.kde.kongress">Flathub</a> and more.<br />
-</li>
-<li><b>Progressive Web App: Sojourner</b><br />
-    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
-    Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
 </li>
 <li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
     <a href="https://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
@@ -45,13 +37,21 @@ Ways to have the schedule with you at all times, without wasting trees:
 </ul>
 
 <p>
-Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:fosdem@lists.fosdem.org">fosdem@lists.fosdem.org</a>.
+Others? Or tested one of the below for this year? Let us know on our mailinglist: <a href="mailto:fosdem@lists.fosdem.org">apps@lists.fosdem.org</a>.
 </p>
 
 <hr />
 
 <h3>Apps for Mobile Devices, archive</h3>
 <ul>
+<li><b>Android: FOSDEM Schedule (2021)</b><br />
+    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2021">Source code</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-droid</a><br />
+</li>
+<li><b>Progressive Web App: Sojourner (2021)</b><br />
+    <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
+    Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
+</li>
 <li><b>Android: FOSDEM (2020)</b><br />
     <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
