readd FOSDEM schedule app

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -13,6 +13,10 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-droid</a>.<br />
 </li>
+<li><b>Android: FOSDEM Schedule</b><br />
+    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2022">Source code</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-droid</a><br />
+</li>
 <li><b>Android: Giggity</b><br />
     <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-droid</a>.<br />
@@ -44,10 +48,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 
 <h3>Apps for Mobile Devices, archive</h3>
 <ul>
-<li><b>Android: FOSDEM Schedule (2021)</b><br />
-    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2021">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-droid</a><br />
-</li>
 <li><b>Progressive Web App: Sojourner (2021)</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
     Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
