--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -16,7 +16,7 @@ navcat: true
 <a name="online"></a>
 <h3>Online component</h3>
 <p>
-  The format for FOSDEM 2022 has not yet been decided. It will have an important online component though. How does this work? Visit <a href="page:practical/online">this page</a> for more details.
+  The format for FOSDEM 2022 will be online only. How does this work? Visit <a href="page:practical/online">this page</a> for more details.
 </p>
 
 <a name="venue"></a>
