Updated practical/ pages to 2022

--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -1,10 +1,10 @@
 ---
-title: FOSDEM 2021 Online
+title: FOSDEM 2022 Online
 navcat: true
 ---
-<h3>FOSDEM 2021 is the first fully online edition of FOSDEM!</h3>
+<h3>FOSDEM 2022 is the second fully online edition of FOSDEM!</h3>
 <p>
-    Welcome to our first online edition. We still have our familiar programme of keynotes, devrooms and stands, but in a slightly different
+    Welcome to our second online edition. We still have our familiar programme of keynotes, devrooms and stands, but in a slightly different
     form. As we can't simply point you to the right room (always a challenge at the ULB), we've provided a lot more extra practical information
     so you can enjoy the conference.
 </p>
@@ -38,7 +38,7 @@ navcat: true
     normally somewhere on the ULB campus, but now fully virtualised. There are two live streams for each room, one with only the video (called
     <i>Video only</i>) and one with Q&A (called <i>Video with Q&A</i>). Both streams will show the same video, so you won't miss a thing.
 </p>
-<img src="/2021/practical/devroom_main_view.png" style="margin: .5em 2% 2em 2%; width: 96%;" alt="Video with Q&A." />
+<img src="/2022/practical/devroom_main_view.png" style="margin: .5em 2% 2em 2%; width: 96%;" alt="Video with Q&A." />
 <p>
     If you want to say things in the chat, you’ll need to sign up for an account (the green <i>Sign up</i> button at the bottom right).
     Alternatively, if you already have an account somewhere on Matrix, you can sign in with that one.
@@ -66,7 +66,7 @@ navcat: true
 <a name="mobile"></a>
 <h5>Notes for mobile users</h5>
 <p>
-    You can attend FOSDEM 2021 on mobile without a problem. However, the <i>Video with Q&A</i> links will not work on a mobile browser. If you
+    You can attend FOSDEM 2022 on mobile without a problem. However, the <i>Video with Q&A</i> links will not work on a mobile browser. If you
     wish to participate in the Q&A, you'll have to click the <i>Join the conversation!</i> link instead. Watching the video feed via <i>Video only</i>
     will always work, as will the <a href="page:live">conference floor page</a>.
 </p>
