--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -4,7 +4,7 @@ navcat: true
 ---
 <h3>FOSDEM 2022 is the second fully online edition of FOSDEM!</h3>
 <p>
-    Welcome to our second online edition. Just like last year, ee still have our familiar programme of keynotes, devrooms and stands, but in a slightly different
+    Welcome to our second online edition. Just like last year, we still have our familiar programme of keynotes, devrooms and stands, but in a slightly different
     form. As we can't simply point you to the right room (always a challenge at the ULB), we've provided a lot more extra practical information
     so you can enjoy the conference.
 </p>
