Rewording of the live page + link to space

--- a/content/live/index.html
+++ b/content/live/index.html
@@ -11,15 +11,17 @@ title: Conference Floor
 
     <div class="text-block" style="margin-bottom: 5em;">
       <h2>Welcome to the conference floor for FOSDEM 2022!</h2>
-      <p>Find an overview of all talks and all stands. Click on any of them to visit or view them; no registration or configuration required.</p>
-      <p><a href="page:schedule">Visit the schedule</a> to find out what's on in what room, click on your favourite room, sit back and relax.</p>
+        <p>Welcome to our fully virtual version of the ULB, thanks to the amazing people at Matrix.org! FOSDEM is
+            spread out over a lot of rooms at <i>chat.fosdem.org</i>.</p>
+      <p>Click on any of the tracks or stands to visit or view them; no registration or configuration required.</p>
+      <p><a href="page:schedule">Visit the schedule</a> to find out what's on in each room, then click on your favourite room, sit back and relax.</p>
       <p>Confused? Unsure how to proceed? <a href="page:practical/online">Visit the practical information page</a>, <a href="page:faq">look in the FAQ</a>
-    or <a href="https://matrix.to/#/#infodesk:fosdem.org?web-instance[element.io]=chat.fosdem.org">talk to a human at the Infodesk</a>!</p>
+    or <a href="https://matrix.to/#/#INFODESK:fosdem.org?web-instance[element.io]=chat.fosdem.org">talk to a human at the Infodesk</a>!</p>
       <p class="btn-news"><a href="#keynotes">To the main tracks.</a></p>
       <p class="btn-news"><a href="#devrooms">To the devrooms.</a></p>
       <p class="btn-news"><a href="#stands">To the stands.</a></p>
       <p class="btn-news"><a href="page:schedule">To the schedule.</a></p>
-      <p class="btn-news"><a href="https://chat.fosdem.org/#/home">To the chat.</a></p>        
+      <p class="btn-news"><a href="https://chat.fosdem.org/#/room/#fosdem2022:fosdem.org">To the FOSDEM 2022 Matrix space.</a></p>
     </div>
     <div class="container">
             <div class="row" style="margin-top: 5em; margin-bottom: 2em;">
