Fix FAQ Table of contents
Align the table of content of the FAQ to the actual questions that
exist in the file.

--- a/content/faq.html
+++ b/content/faq.html
@@ -8,8 +8,8 @@ navtitle: FAQ
         <ul>
 	    <li><a href=#cfp">CFP</a></li>
             <li><a href="#video">Visiting and videos</a></li>
+            <li><a href="#video-recordings">Recordings</li>
             <li><a href="#chat">Chatting and Q&A</a></li>
-            <li><a href="#tshirts">T-shirts</a></li>
             <li><a href="#registration">Registration</a></li>
             <li><a href="#fosdem">FOSDEM in general</a></li>
         </ul>
