--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -11,15 +11,15 @@ Ways to have the schedule with you at all times, without wasting trees:
 <ul>
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-droid</a>.<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-Droid</a>.<br />
 </li>
 <li><b>Android: FOSDEM Schedule</b><br />
     <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2022">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-droid</a><br />
+    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-Droid</a><br />
 </li>
 <li><b>Android: Giggity</b><br />
     <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-droid</a>.<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-Droid</a>.<br />
 </li>
 <li><b>KDE Plasma: Kongress</b><br />
     <a href="https://invent.kde.org/utilities/kongress">Source code</a><br />
