properly fix rss link

--- a/content/faq.html
+++ b/content/faq.html
@@ -21,7 +21,7 @@ navtitle: FAQ
 	<h4>CFP</h4>
 	<h5><span class="label label-info">Q:</span> When will the CFP open?</h5>
 	<p>
-	    Soon. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/2023/rss.xml">rss feed</a>.
+	    Soon. Please keep an eye on our <a href="page:news">news</a> page or subscribe to our <a href="https://fosdem.org/rss.xml">rss feed</a>.
 	</p>
         <a name="video"></a>
         <h4>Visiting and videos</h4>
