faq: readd visa request question

--- a/content/faq.html
+++ b/content/faq.html
@@ -29,9 +29,22 @@ navtitle: FAQ
         <p>
             The conference is in Brussels time, which is CET (UTC + 1).
         </p>
+        <h5><span class="label label-info">Q:</span> I need a formal invitation for a VISA request</h5>
+        <p>
+            For legal reasons, the FOSDEM organization can only issue such letters of invitation to “main track” speakers for whom we also make
+travel and hotel arrangements.
+        </p>
+
+        <p>If you are attending FOSDEM as part of your involvement with a project represented at our conference, we recommend you get in touch with
+someone you know locally who is involved in the project and ask them to invite you.
+        </p>
+
+        <p>For information regarding Belgian visa requirements, we refer you to Belgium’s Foreign Affairs, Foreign Trade and Development Cooperation
+website.
+        </p>
         <h5><span class="label label-info">Q:</span> Where can I watch the talks?</h5>
         <p>
-            All talks can be watched from our website. Go to <a href="page:live">fosdem/2022/live</a>, click on the track
+            All talks can be watched from our website. Go to <a href="page:live">fosdem/2023/live</a>, click on the track
             that interests you and enjoy the talk.
         </p>
         <p>
