--- a/content/faq.html
+++ b/content/faq.html
@@ -55,11 +55,11 @@ website.
         <h5><span class="label label-info">Q:</span> Are talk recordings available?</h5>
         <p>
             All talk recordings will be made available on
-            <a href="https://video.fosdem.org/2022/">video.fosdem.org/2022</a> as soon as the presenter reviewed the contents to
+            <a href="https://video.fosdem.org/2023/">video.fosdem.org/2023</a> as soon as the presenter reviewed the contents to
             make sure the recording is correct.
         </p>
         <p>
-            This will usually take a few days to a few weeks, check <a href="https://video.fosdem.org/2022/">video.fosdem.org/2022</a>
+            This will usually take a few days to a few weeks, check <a href="https://video.fosdem.org/2023">video.fosdem.org/2023</a>
             for updates!
         </p>
         <h5><span class="label label-info">Q:</span> Is there a job corner?</h5>
@@ -70,7 +70,7 @@ website.
         <h4>Chatting and Q&A</h4>
         <h5><span class="label label-info">Q:</span> I want to talk to the speaker.</h5>
         <p>
-            Easy! Go to <a href="page:live">fosdem/2022/live</a>, click on the track you are interested in, (or use the <a href="page:schedule">schedule</a>
+            Easy! Go to <a href="page:live">fosdem/2023/live</a>, click on the track you are interested in, (or use the <a href="page:schedule">schedule</a>
             to go directly to an interesting talk) register an account with <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>
             (see <a href="page:practical/online">our practical information page</a> for more details) and ask away.
             Please remember to keep the conversation civil and on topic.
