DNS devroom: CfP coming soon

--- a/content/schedule/devrooms/dns.html
+++ b/content/schedule/devrooms/dns.html
@@ -2,5 +2,5 @@
 The DNS devroom will cover all topics DNS.
 </p>
 <p>
-  This half-day will start with several talks on DNS integration into larger systems (including IPv6) followed by 2 talks on code quality and testing. Next we'll have talks about new DNS software and management features. We'll close with a more operational topic.
+CfP coming soon!
 </p>
