Update security devroom description (#198)
Update security devroom description

--- a/content/schedule/devrooms/security.html
+++ b/content/schedule/devrooms/security.html
@@ -1,17 +1,12 @@
 <p>
   The security devroom topic this year is <q>Practial use of security technologies<q>.
 </p>
+<p>This year Security Devroom accepts any talks that is relevant to security in the free software and open source world. We don't exclude any relevant submission, but some suggested topics include:</p>
 
-<p>
-  This covers security protocols and their usability, the usability of the open
-  source crypto libraries and applications from both developer and user side,
-  pitfails of using crypto, security threats, vulnerabilities and their mitigations
-  in real-world use cases.
-  We welcome presentations which elaborate on these topics, and presentations
-  that analyze other's solutions.
-</p>
-
-<p>
-  See <a href="https://github.com/security-devroom/fosdem-2020">https://github.com/security-devroom/fosdem-2020</a>
-  for more information.
-</p>
+<ul>
+  <li>Supply chain security: Trust and verifiability
+  <li>Software quality tools and best practices
+  <li>Cryptography: classic and post-quantum
+  <li>Hardware-assisted security improvements
+  <li>Security hardening, vulnerability handling and threat detection
+</ul>
