security: Remove first bogus paragraph

--- a/content/schedule/devrooms/security.html
+++ b/content/schedule/devrooms/security.html
@@ -1,7 +1,7 @@
 <p>
-  The security devroom topic this year is <q>Practial use of security technologies<q>.
+  This year Security Devroom accepts any talks that is relevant to security in the free software
+  and open source world. We don't exclude any relevant submission, but some suggested topics include:
 </p>
-<p>This year Security Devroom accepts any talks that is relevant to security in the free software and open source world. We don't exclude any relevant submission, but some suggested topics include:</p>
 
 <ul>
   <li>Supply chain security: Trust and verifiability
