Add link to CfP for Testing and Automation devroom

--- a/content/schedule/devrooms/testing_and_automation.html
+++ b/content/schedule/devrooms/testing_and_automation.html
@@ -17,3 +17,7 @@ libraries and frameworks.
 This is the place where open source projects can share their
 "testing from the trenches" stories!
 </p>
+
+<p>
+Please <a href="https://fosdem-testingautomation.github.io/">check our CfP and submit a talk!</a>
+</p>
