--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -13,17 +13,18 @@ navcat: true
   we also gratefully accept <a href="page:support/donate">donations</a>.
 </p>
 
-<a name="online"></a>
+<!--a name="online"></a>
 <h3>Online component</h3>
 <p>
   The format for FOSDEM 2022 will be online only. How does this work? Visit <a href="page:practical/online">this page</a> for more details.
-</p>
+</p-->
 
 <a name="venue"></a>
 <h3>Getting there</h3>
-<p>
+<!--p>
   For the online component, open your favourite web browser and navigate to the designated page.
-</p>
+</p-->
+<p>See <a href="page:practical/transportation">transportation</a>.
 
 <a name="timezone"></a>
 <h3>Timezone</h3>
