Streamline naming of CfP to participation

--- a/content/schedule/tracks.html
+++ b/content/schedule/tracks.html
@@ -22,7 +22,7 @@ categories = [
     <thead>
         <tr>
             <th>Track</th>
-	    <th>Call For<br /> Papers</th>
+	    <th>Call For<br /> Participation</th>
             <th>Rooms</th>
             <% days.each do |d| %>
             <th><%= d[:title] %></th>
