--- a/content/schedule/devrooms/nix_and_nixos.html
+++ b/content/schedule/devrooms/nix_and_nixos.html
@@ -1,11 +1,13 @@
-[Nix and NixOS](https://nixos.org/) are tools that take a unique
+<p>
+<a href="https://nixos.org">Nix and NixOS</a> are tools that take a unique
 approach to package management and system configuration. It differs
 with most other tools in that it is heavily inspired by functional
 programming. Those inspirations being: immutable, side effectless, and
-correct. It delivers on the promise of “if it works on my machine, it
-will work on yours”. Without shipping your actual machine. 😉
+correct. It delivers on the promise of &quot;if it works on my machine, it
+will work on yours&quot;. Without shipping your actual machine. 😉</p>
 
+<p>
 The Nix and NixOS devroom will present interesting tools, projects,
 features, and much more, within the Nix ecosystem. All by and for the
-Nix community!
+Nix community!</p>
 
