update for 2023 and remove outdated t-shirt designs

--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -12,6 +12,12 @@ title: Accessibility
   physical limitations to make the most of the event.
 </p>
 
+<p>
+  During the event, accessible routes will be signposted with the &#9855;. All
+  rooms apart from the upper rooms in AW are weelchair accessible. A map of the
+  campus is available <a href="https://www.ulb.be/fr/accessibilite-pour-tous/amenagements-specifiques">here</a>.
+</p>
+
 <h3>Suggestions welcome</h3>
 <p>
   We welcome your ideas for improving accessibility at FOSDEM. Please
