--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -1,13 +1,13 @@
 ---
-title: FOSDEM 2022 Online
+title: FOSDEM 2023 In-person
 navcat: true
 ---
-<h3>FOSDEM 2022 is the second fully online edition of FOSDEM!</h3>
+<h3>FOSDEM 2023 is again in-person.</h3>
 <p>
-    Welcome to our second online edition. Just like last year, we still have our familiar programme of keynotes, devrooms and stands, but in a slightly different
-    form. As we can't simply point you to the right room (always a challenge at the ULB), we've provided a lot more extra practical information
-    so you can enjoy the conference.
+    Visit <a href="page:practical/transportation">the transportation page</a> for more information
+    on how to get to the conference.
 </p>
+<!--
 <a name="infodesk"></a>
 <h3>Infodesk</h3>
 <p>
@@ -73,6 +73,7 @@ navcat: true
 
 <a name="stands"></a>
 <h4>Stands</h4>
+-->
 <!--
 <p>
     All stands can be visited at <a href="https://stands.fosdem.org/"><i>stands.fosdem.org</i></a>. Go and check them out, there are a lot of
@@ -80,8 +81,10 @@ navcat: true
     but a web browser to visit the stands.
 </p>
 -->
+<!--
 <p>
     You can talk to the people behind the project by clicking the <i>Join the conversation!</i> link on each stand page. We use the same software as
     for the <a href="#q_and_a">talks Q&A</a> to enable this, so simply click the link, register and participate. You can find all the details
     <a href="#q_and_a">here</a>!
 </p>
+-->
