sightseeing tour updates

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -103,10 +103,10 @@ aliases: /sightseeing
 </p>
 
 <p>
-  Participation is free but places are limited &lt;30, and you <b>must register</b> beforehand.
-  Please send an e-mail to
+Participation is free but places are limited &lt;30, and you <b>must register</b> beforehand. <b>Registration will start mid-January on this page.</b>
+  <!--Please send an e-mail to
   <a href="mailto:tour@fosdem.org">tour@fosdem.org</a> with an e-mail and phonenumber where you are reachable during FOSDEM to register for these
-  tours, and specify if you are willing to join the tour on Saturday, Sunday, or both.
+  tours, and specify if you are willing to join the tour on Saturday, Sunday, or both.-->
 </p>
 
 
@@ -119,7 +119,7 @@ aliases: /sightseeing
 </div>
 
 <p>
-  To register, or if you have any questions about the sightseeing tours, please
+<!--To register, or if-->Should you have any questions about the sightseeing tours, please
   mail <a href="mailto:tour@fosdem.org">tour@fosdem.org</a>.
 </p>
 
