sightseeing: update nav link

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -69,13 +69,13 @@ aliases: /sightseeing
   <tbody>
     <tr>
       <th>Saturday</th>
-      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/d/c:0:347.7:214.89/@0,346.04,215.75,4.95">UD building</a></td>
+      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/l/sightseeing_tour_meeting">UD building</a></td>
       <td>12:30</td>
       <td>18:00</td>
     </tr>
     <tr>
       <th>Sunday</th>
-      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/d/c:0:347.7:214.89/@0,346.04,215.75,4.95">UD building</a></td>
+      <td>Ground floor corridor inside <a href="https://nav.fosdem.org/l/sightseeing_tour_meeting">UD building</a></td>
       <td>12:30</td>
       <td>16:30</td>
     </tr>
