Fix markdown to html

--- a/content/schedule/devrooms/sovereign_cloud.html
+++ b/content/schedule/devrooms/sovereign_cloud.html
@@ -7,5 +7,5 @@ The recent EU focus on digital sovereignity has brought fresh attention and inno
 Focus is on a practical aspect of digital sovereignty:  how it affects user-oriented and potentially privacy-containing infrastructure in the cloud computing era.
 </p>
 <p>
-This aspect is the _sovereign cloud_, the intersection of digital sovereignty and a modern cloud-centric way to create and sustain infrastructure, operations, and development to address the needs of users.
+This aspect is the <em>sovereign cloud</em>, the intersection of digital sovereignty and a modern cloud-centric way to create and sustain infrastructure, operations, and development to address the needs of users.
 </p>
