Mention virtual buildings.

--- a/content/schedule/buildings.html
+++ b/content/schedule/buildings.html
@@ -65,6 +65,9 @@ Here is a list of those buildings, and the rooms in each of them.
   </tbody>
 </table>
 
+<p><b>Talks shown in the D building only take place online.</b></p>
+<p>(The M building holds live test data used before the event.)</p>
+
       <div class="map">
         <img style="display: block; margin-left: auto; margin-right: auto" src="asset:campusmap" alt="ULB Solbosch Campus map" title="ULB Solbosch Campus map"}/>
       </div>
