--- a/content/practical/accessibility.html
+++ b/content/practical/accessibility.html
@@ -13,9 +13,7 @@ title: Accessibility
 </p>
 
 <p>
-  During the event, accessible routes will be signposted with the &#9855;. All
-  rooms apart from the upper rooms in AW are weelchair accessible. A map of the
-  campus is available <a href="https://www.ulb.be/fr/accessibilite-pour-tous/amenagements-specifiques">here</a>.
+  Wheelchair accessible routes and toilets can be found through <a href='https://nav.fosdem.org'>nav.fosdem.org</a> (hint: search for "wheelchair" and use the "avoid stairs" navigation setting). All rooms apart from the upper rooms in AW are weelchair accessible. A static map of the campus is available <a href="https://www.ulb.be/fr/accessibilite-pour-tous/amenagements-specifiques">here</a>.
 </p>
 
 <h3>Suggestions welcome</h3>
