disable certification exams from schedule

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -83,7 +83,7 @@ columns = 3
   <a href="#devrooms">developer rooms</a>,
   <a href="#lightningtalks">lightning talks</a>,
   <a href="#stands">stands</a> and
-  <a href="#certification">certification exams</a>.
+  <!--a href="#certification">certification exams</a-->.
 </p>
 
 <p>
@@ -299,7 +299,7 @@ columns = 3
 </p>
 <% end %>
 
-<a name="certification"></a>
+<!--a name="certification"></a>
 <h3> Certification Exams</h3>
 <p>
   Several certification organizations provide FOSDEM visitors with the
@@ -347,6 +347,7 @@ columns = 3
 <% else %>
   <p><span class="label label-info">Certification exams have not been scheduled yet.</span></p>
 <% end %>
+<-->
 
 <a name="fringe"></a>
 <h3> The FOSDEM Fringe</h3>
